fixed alignment on alerts

--- a/src/styles/partials/components/_alert.scss
+++ b/src/styles/partials/components/_alert.scss
@@ -1,12 +1,13 @@
 .dg_alert {
   background: $vibrant-blue;
   padding: $default-padding;
+  text-align: center;
 
   .dg_alert__container {
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-
+    justify-content: center;
     margin: auto;
     max-width: 1400px;
     width: 100%;
@@ -57,6 +58,11 @@
   &.status {
     border: $border-width-small solid $white;
     outline: $border-width-large solid transparent;
+    text-align: left;
+
+    .dg_alert__container {
+      justify-content: flex-start;
+    }
 
     * {
       color: $white;
